--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://nicholasriykco.github.io/trial--3/",
+  "homepage": "https://justin-dave-w.github.io/Trial4/",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
